--- a/jaxb-ri/xjc/src/com/sun/tools/xjc/MessageBundle_de.properties
+++ b/jaxb-ri/xjc/src/com/sun/tools/xjc/MessageBundle_de.properties
@@ -47,12 +47,12 @@ ConsoleErrorReporter.LineXOfY = \ \ Zeile {0} von {1}
 # may be a placeholder replacement for the second placeholder of ConsoleErrorReporter.LineXOfY (if the file location is unknown)
 ConsoleErrorReporter.UnknownFile = unbekannte Datei
 	
-Driver.Private.Usage = Zus\u00E4tzliche private Testoptionen:\n\\ \\ -debug             : Ausf\u00FChrung im Debug-Modus (umfasst -verbose)\n\\ \\ -mode <mode>       : F\u00FChrt XJC in einem anderen Ausf\u00FChrungsmodus aus\n\\ \\ -private           :  Zeigt diese Hilfemeldung an\nModus:\n\\ \\ code         :  Generiert Java-Quellcode (Standard)\n\\ \\ dryrun       :  Kompiliert das Schema im Speicher, generiert die Java-Quelle jedoch nicht\n\\ \\ zip          :  Generiert den Java-Quellcode in einer .zip-Datei, wie mit der Option -d angegeben\n\\ \\ sig          :  Gibt die Signaturen des generierten Codes aus\n\\ \\ forest       :  Gibt transformierte DOM-Gesamtstruktur aus\n
-Driver.Public.Usage = Verwendung: xjc [-options ...] <schema file/URL/dir/jar> ... [-b <bindinfo>] ...\nWenn dir angegeben wird, werden alle Schemadateien im Verzeichnis kompiliert.\nWenn jar angegeben wird, wird die /META-INF/sun-jaxb.episode-Binding-Datei kompiliert.\nOptionen:\n\\ \\ -nv                :  F\u00FChrt keine strikte Validierung der Eingabeschemas durch\n\\ \\ -extension         :  L\u00E4sst Herstellererweiterungen zu - Befolgt die \n\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ Kompatibilit\u00E4tsregeln und App E.2 der JAXB-Spezifikation nicht strikt\n\\ \\ -b <file/dir>      :  Gibt externe Bindings-Dateien an (jede <file> muss ihre eigene Option -b haben)\n\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ Wenn ein Verzeichnis angegeben wird, wird **/*.xjb durchsucht\n\\ \\ -d <dir>           :  Generierte Dateien werden in diesem Verzeichnis gespeichert\n\\ \\ -p <pkg>           :  Gibt das Zielpackage an\n\\ \\ -httpproxy <proxy> :  set HTTP/HTTPS proxy. Format ist [user[:password]@]proxyHost:proxyPort\n\\ \\ -httpproxyfile <f> : Wird wie -httpproxy verwendet, verwendet jedoch das Argument in einer Datei zum Schutz des Kennwortes \n\\ \\ -classpath <arg>   :  Gibt an, wo die Benutzerklassendateien gefunden werden\n\\ \\ -catalog <file>    :  Gibt Katalogdateien zur Aufl\u00F6sung von externen Entity-Referenzen an\n\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ Unterst\u00FCtzt TR9401, XCatalog und OASIS-XML-Katalogformat.\n\\ \\ -readOnly          :  Generierte Dateien werden im schreibgesch\u00FCtzten Modus gelesen\n\\ \\ -npa               :  Unterdr\u00FCckt die Generierung von Annotationen auf Packageebene (**/package-info.java)\n\\ \\ -no-header         :  Unterdr\u00FCckt die Generierung eines Datei-Headers mit Zeitstempel\n\\ \\ -target (2.0|2.1)  :  Verh\u00E4lt sich wie XJC 2.0 oder 2.1 und generiert Code, der keine 2.2-Features verwendet.\n\\ \\ -encoding <encoding> :  Gibt Zeichencodierung f\u00FCr generierte Quelldateien an\n\\ \\ -enableIntrospection :  Aktiviert die ordnungsgem\u00E4\u00DFe Generierung von booleschen Gettern/Settern zur Aktivierung von Bean Introspection-APIs \n\\ \\ -contentForWildcard  :  Generiert Contenteigenschaft f\u00FCr Typen mit mehreren von xs:any abgeleiteten Elementen \n\\ \\ -xmlschema         :  Behandelt Eingabe als W3C-XML-Schema (Standard)\n\\ \\ -relaxng           :  Behandelt Eingabe als RELAX NG (experimentell, nicht unterst\u00FCtzt)\n\\ \\ -relaxng-compact   :  Behandelt Eingabe als RELAX NG-Kompaktsyntax (experimentell, nicht unterst\u00FCtzt)\n\\ \\ -dtd               :  Behandelt Eingabe als XML DTD (experimentell, nicht unterst\u00FCtzt)\n\\ \\ -wsdl              :  Behandelt Eingabe als WSDL und kompiliert enthaltene Schemas (experimentell, nicht unterst\u00FCtzt)\n\\ \\ -verbose           :  Verwendet extra-verbose\n\\ \\ -quiet             :  Unterdr\u00FCckt die Compilerausgabe\n\\ \\ -help              :  Zeigt diese Hilfemeldung an\n\\ \\ -version           :  Zeigt Versionsinformationen an\n\\ \\ -fullversion       :  Zeigt vollst\u00E4ndige Versionsinformationen an\n
+Driver.Private.Usage = Zus\u00e4tzliche private Testoptionen:\n\\ \\ -debug             : Ausf\u00fchrung im Debug-Modus (umfasst -verbose)\n\\ \\ -mode <mode>       : F\u00fchrt XJC in einem anderen Ausf\u00fchrungsmodus aus\n\\ \\ -private           :  Zeigt diese Hilfemeldung an\nModus:\n\\ \\ code         :  Generiert Java-Quellcode (Standard)\n\\ \\ dryrun       :  Kompiliert das Schema im Speicher, generiert die Java-Quelle jedoch nicht\n\\ \\ zip          :  Generiert den Java-Quellcode in einer .zip-Datei, wie mit der Option -d angegeben\n\\ \\ sig          :  Gibt die Signaturen des generierten Codes aus\n\\ \\ forest       :  Gibt transformierte DOM-Gesamtstruktur aus\n
+Driver.Public.Usage = Verwendung: xjc [-options ...] <schema file/URL/dir/jar> ... [-b <bindinfo>] ...\nWenn dir angegeben wird, werden alle Schemadateien im Verzeichnis kompiliert.\nWenn jar angegeben wird, wird die /META-INF/sun-jaxb.episode-Binding-Datei kompiliert.\nOptionen:\n\\ \\ -nv                :  F\u00fchrt keine strikte Validierung der Eingabeschemas durch\n\\ \\ -extension         :  L\u00e4sst Herstellererweiterungen zu - Befolgt die \n\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ Kompatibilit\u00e4tsregeln und App E.2 der JAXB-Spezifikation nicht strikt\n\\ \\ -b <file/dir>      :  Gibt externe Bindings-Dateien an (jede <file> muss ihre eigene Option -b haben)\n\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ Wenn ein Verzeichnis angegeben wird, wird **/*.xjb durchsucht\n\\ \\ -d <dir>           :  Generierte Dateien werden in diesem Verzeichnis gespeichert\n\\ \\ -p <pkg>           :  Gibt das Zielpackage an\n\\ \\ -httpproxy <proxy> :  set HTTP/HTTPS proxy. Format ist [user[:password]@]proxyHost:proxyPort\n\\ \\ -httpproxyfile <f> : Wird wie -httpproxy verwendet, verwendet jedoch das Argument in einer Datei zum Schutz des Kennwortes \n\\ \\ -classpath <arg>   :  Gibt an, wo die Benutzerklassendateien gefunden werden\n\\ \\ -catalog <file>    :  Gibt Katalogdateien zur Aufl\u00f6sung von externen Entity-Referenzen an\n\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ Unterst\u00fctzt TR9401, XCatalog und OASIS-XML-Katalogformat.\n\\ \\ -readOnly          :  Generierte Dateien werden im schreibgesch\u00fctzten Modus gelesen\n\\ \\ -npa               :  Unterdr\u00fcckt die Generierung von Annotationen auf Packageebene (**/package-info.java)\n\\ \\ -no-header         :  Unterdr\u00fcckt die Generierung eines Datei-Headers mit Zeitstempel\n\\ \\ -target (2.0|2.1)  :  Verh\u00e4lt sich wie XJC 2.0 oder 2.1 und generiert Code, der keine 2.2-Features verwendet.\n\\ \\ -encoding <encoding> :  Gibt Zeichencodierung f\u00fcr generierte Quelldateien an\n\\ \\ -enableIntrospection :  Aktiviert die ordnungsgem\u00e4\u00dfe Generierung von booleschen Gettern/Settern zur Aktivierung von Bean Introspection-APIs \n\\ \\ -contentForWildcard  :  Generiert Contenteigenschaft f\u00fcr Typen mit mehreren von xs:any abgeleiteten Elementen \n\\ \\ -xmlschema         :  Behandelt Eingabe als W3C-XML-Schema (Standard)\n\\ \\ -relaxng           :  Behandelt Eingabe als RELAX NG (experimentell, nicht unterst\u00fctzt)\n\\ \\ -relaxng-compact   :  Behandelt Eingabe als RELAX NG-Kompaktsyntax (experimentell, nicht unterst\u00fctzt)\n\\ \\ -dtd               :  Behandelt Eingabe als XML DTD (experimentell, nicht unterst\u00fctzt)\n\\ \\ -wsdl              :  Behandelt Eingabe als WSDL und kompiliert enthaltene Schemas (experimentell, nicht unterst\u00fctzt)\n\\ \\ -verbose           :  Verwendet extra-verbose\n\\ \\ -quiet             :  Unterdr\u00fcckt die Compilerausgabe\n\\ \\ -help              :  Zeigt diese Hilfemeldung an\n\\ \\ -version           :  Zeigt Versionsinformationen an\n\\ \\ -fullversion       :  Zeigt vollst\u00e4ndige Versionsinformationen an\n
 Driver.AddonUsage = \nErweiterungen:
 
 # {0} - one of: DTD, RELAX NG, RELAX NG compact syntax, WSDL; {1} - one of (respectively): -dtd, -relaxng, -relaxng-compact, -wsdl
-Driver.ExperimentalLanguageWarning = Versuchen Sie, {0} zu kompilieren? Unterst\u00FCtzung f\u00FCr {0} ist zu Testzwecken bestimmt. Eine Aktivierung ist mit der Option {1} m\u00F6glich.
+Driver.ExperimentalLanguageWarning = Versuchen Sie, {0} zu kompilieren? Unterst\u00fctzung f\u00fcr {0} ist zu Testzwecken bestimmt. Eine Aktivierung ist mit der Option {1} m\u00f6glich.
 
 # Not concatenated with any other String. Variable: Name of a directory (input argument of the XJC utility).
 Driver.NonExistentDir = In ein nicht vorhandenes Verzeichnis "{0}" kann nicht geschrieben werden
@@ -77,14 +77,14 @@ Driver.MissingProxyHost = Entweder fehlt bei der Option -host ein Operand, \node
 # Not concatenated with any other string (written on a separate line).
 Driver.MissingProxyPort = Entweder fehlt bei der Option -port ein Operand, \noder es wurde -host, jedoch nicht -port angegeben
 
-Driver.ILLEGAL_TARGET_VERSION = "{0}" ist keine g\u00FCltige Zielversion. "2.0" und "2.1" werden unterst\u00FCtzt.
+Driver.ILLEGAL_TARGET_VERSION = "{0}" ist keine g\u00fcltige Zielversion. "2.0" und "2.1" werden unterst\u00fctzt.
 
 # Not concatenated with any other string (written on a separate line).
 Driver.MISSING_PROXYFILE = Bei der Option -httpproxyfile fehlt ein Operand
 
 Driver.NO_SUCH_FILE = Keine derartige Datei: {0}
 
-Driver.ILLEGAL_PROXY = "{0}" ist kein g\u00FCltiges Proxyformat. Das Format ist [user[:password]@]proxyHost:proxyPort
+Driver.ILLEGAL_PROXY = "{0}" ist kein g\u00fcltiges Proxyformat. Das Format ist [user[:password]@]proxyHost:proxyPort
 
 # Not concatenated with any other string (written on a separate line).
 Driver.UnrecognizedMode = unbekannter Modus {0}
@@ -92,7 +92,7 @@ Driver.UnrecognizedMode = unbekannter Modus {0}
 # Not concatenated with any other string (written on a separate line).
 Driver.UnrecognizedParameter = unbekannter Parameter {0}
 
-Driver.UnsupportedEncoding = nicht unterst\u00FCtzte Codierung: {0}
+Driver.UnsupportedEncoding = nicht unterst\u00fctzte Codierung: {0}
 
 Driver.MissingGrammar = Grammatik nicht angegeben
 
@@ -104,7 +104,7 @@ Driver.ParsingSchema = Ein Schema wird geparst ...
 	
 Driver.ParseFailed = Ein Schema konnte nicht geparst werden.
 
-Driver.StackOverflow = Stack-\u00DCberlauf. Entweder kompilieren Sie ein gro\u00DFes Schema, das mehr Ressourcen erfordert, oder XJC enth\u00E4lt einen Bug. Erweitern Sie zuerst die Stack-Gr\u00F6\u00DFe mit der Option -Xss JVM. Wenn das Problem dadurch nicht gel\u00F6st wird, verwenden Sie die Option -debug, um den Stack Trace abzurufen, und wenden Sie sich an Sun. 
+Driver.StackOverflow = Stack-\u00dcberlauf. Entweder kompilieren Sie ein gro\u00dfes Schema, das mehr Ressourcen erfordert, oder XJC enth\u00e4lt einen Bug. Erweitern Sie zuerst die Stack-Gr\u00f6\u00dfe mit der Option -Xss JVM. Wenn das Problem dadurch nicht gel\u00f6st wird, verwenden Sie die Option -debug, um den Stack Trace abzurufen, und wenden Sie sich an Sun. 
 
 # Not concatenated with any other string (written on a separate line).
 Driver.CompilingSchema = Ein Schema wird kompiliert ...
@@ -112,11 +112,11 @@ Driver.CompilingSchema = Ein Schema wird kompiliert ...
 Driver.FailedToGenerateCode = Code konnte nicht erzeugt werden.
 
 # DO NOT localize the @@BUILD_VERSION@@ string - it is a token for an ant <replaceFilter>
-Driver.FilePrologComment = Diese Datei wurde mit der JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v@@BUILD_VERSION@@ generiert \nSiehe <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \n\u00C4nderungen an dieser Datei gehen bei einer Neukompilierung des Quellschemas verloren. \nGeneriert: {0} \n
+Driver.FilePrologComment = Diese Datei wurde mit der JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v@@BUILD_VERSION@@ generiert \nSiehe <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \n\u00c4nderungen an dieser Datei gehen bei einer Neukompilierung des Quellschemas verloren. \nGeneriert: {0} \n
 
 Driver.Version = xjc @@BUILD_VERSION@@
 
-Driver.FullVersion = xjc vollst\u00E4ndige Version "@@BUILD_FULL_VERSION@@"
+Driver.FullVersion = xjc vollst\u00e4ndige Version "@@BUILD_FULL_VERSION@@"
 
 Driver.BuildID = @@BUILD_VERSION@@
 
@@ -124,7 +124,7 @@ Driver.BuildID = @@BUILD_VERSION@@
 jaxb.jdk.version=@@JAXB_JDK_VERSION@@
 
 # see java.text.SimpleDateFormat for format syntax
-# Format should not be changed, English locale is used to transform this string into a real date. Letters can be translated but the user should known that java.text.SimpleDateFormat is responsible for formatting (meaning of symbols can be found at http://docs.oracle.com/javase/tutorial/i18n/format/simpleDateFormat.html).
+# DO NOT LOCALIZE, Format should not be changed, English locale is used to transform this string into a real date.
 Driver.DateFormat = yyyy.MM.dd
 
 # see java.text.SimpleDateFormat for format syntax
@@ -143,25 +143,25 @@ Driver.WarningMessage = [WARNING] {0}
 # INFO in this meaning is a well known level of logging and should not be translated.
 Driver.InfoMessage = [INFO] {0}
 
-ModelLoader.TooManySchema = Zu viele Schemadateien f\u00FCr diese Schemasprache. Kompilieren Sie die Dateien nacheinander.
+ModelLoader.TooManySchema = Zu viele Schemadateien f\u00fcr diese Schemasprache. Kompilieren Sie die Dateien nacheinander.
 
-ModelLoader.BindingFileNotSupportedForRNC = Externe Binding-Dateien werden f\u00FCr die kompakte RELAX NG-Syntax nicht unterst\u00FCtzt.
+ModelLoader.BindingFileNotSupportedForRNC = Externe Binding-Dateien werden f\u00fcr die kompakte RELAX NG-Syntax nicht unterst\u00fctzt.
 
 Driver.DefaultVersion = Als Standardversion wird JAXB 2.0 verwendet
 
-Driver.DefaultPackageWarning = Standard-Java-Package angegeben. Sie k\u00F6nnen aus Klassen in einem anderen Package nicht auf den generierten Code zugreifen.
+Driver.DefaultPackageWarning = Standard-Java-Package angegeben. Sie k\u00f6nnen aus Klassen in einem anderen Package nicht auf den generierten Code zugreifen.
 
-Driver.NotAValidFileName = "{0}" ist kein g\u00FCltiger Dateiname: {1}
+Driver.NotAValidFileName = "{0}" ist kein g\u00fcltiger Dateiname: {1}
 
-Driver.FailedToParse = Parsen von "{0}" nicht m\u00F6glich: {1}
+Driver.FailedToParse = Parsen von "{0}" nicht m\u00f6glich: {1}
 
 Driver.NotAFileNorURL = "{0}" ist weder ein Dateiname noch eine URL
 
-FIELD_RENDERER_CONFLICT = "-{0}" und "-{1}" schlie\u00DFen sich gegenseitig aus, weil sich beide auf die Codegenerierung auswirken 
+FIELD_RENDERER_CONFLICT = "-{0}" und "-{1}" schlie\u00dfen sich gegenseitig aus, weil sich beide auf die Codegenerierung auswirken 
 
-NAME_CONVERTER_CONFLICT = "-{0}" und "-{1}" schlie\u00DFen sich gegenseitig aus, weil sich beide auf die Codegenerierung auswirken
+NAME_CONVERTER_CONFLICT = "-{0}" und "-{1}" schlie\u00dfen sich gegenseitig aus, weil sich beide auf die Codegenerierung auswirken
 
 # {0} - file path, {1} - exception message e.g.: Failed to load "/foo/bar/Library.jar": File not found.
-FAILED_TO_LOAD = Laden von "{0}" nicht m\u00F6glich: {1}
+FAILED_TO_LOAD = Laden von "{0}" nicht m\u00f6glich: {1}
 
 PLUGIN_LOAD_FAILURE = Ein Plug-in konnte nicht geladen werden: "{0}". Verwenden Sie die Systemeigenschaft ''-Dcom.sun.tools.xjc.Options.findServices=true'' zur weiteren Diagnose
