Fix mavenization issues
Change-Id: I91e10955889b321bbdf6859c0fadd6e7b727350f

--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_de.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_de.properties
@@ -111,14 +111,14 @@ Driver.CompilingSchema = Ein Schema wird kompiliert ...
 
 Driver.FailedToGenerateCode = Code konnte nicht erzeugt werden.
 
-# DO NOT localize the @@BUILD_VERSION@@ string - it is a token for an ant <replaceFilter>
-Driver.FilePrologComment = Diese Datei wurde mit der JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v@@BUILD_VERSION@@ generiert \nSiehe <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \n\u00c4nderungen an dieser Datei gehen bei einer Neukompilierung des Quellschemas verloren. \nGeneriert: {0} \n
+# DO NOT localize the ${version} string - it is a token for an ant <replaceFilter>
+Driver.FilePrologComment = Diese Datei wurde mit der JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v${version} generiert \nSiehe <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \n\u00c4nderungen an dieser Datei gehen bei einer Neukompilierung des Quellschemas verloren. \nGeneriert: {0} \n
 
-Driver.Version = xjc @@BUILD_VERSION@@
+Driver.Version = xjc ${version}
 
-Driver.FullVersion = xjc vollst\u00e4ndige Version "@@BUILD_FULL_VERSION@@"
+Driver.FullVersion = xjc vollst\u00E4ndige Version "${version}"
 
-Driver.BuildID = @@BUILD_VERSION@@
+Driver.BuildID = ${version}
 
 # for JDK integration - include version in source zip
 jaxb.jdk.version=@@JAXB_JDK_VERSION@@
