--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_it.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_it.properties
@@ -111,14 +111,14 @@ Driver.CompilingSchema = compilazione di uno schema in corso...
 
 Driver.FailedToGenerateCode = Produzione del codice non riuscita.
 
-# DO NOT localize the @@BUILD_VERSION@@ string - it is a token for an ant <replaceFilter>
-Driver.FilePrologComment = Questo file \u00e8 stato generato dall''architettura JavaTM per XML Binding (JAXB) Reference Implementation, v@@BUILD_VERSION@@ \nVedere <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \nQualsiasi modifica a questo file andr\u00e0 persa durante la ricompilazione dello schema di origine. \nGenerato il: {0} \n
+# DO NOT localize the ${version} string - it is a token for an ant <replaceFilter>
+Driver.FilePrologComment = Questo file \u00e8 stato generato dall''architettura JavaTM per XML Binding (JAXB) Reference Implementation, v${version} \nVedere <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \nQualsiasi modifica a questo file andr\u00e0 persa durante la ricompilazione dello schema di origine. \nGenerato il: {0} \n
 
-Driver.Version = xjc @@BUILD_VERSION@@
+Driver.Version = xjc ${version}
 
-Driver.FullVersion = versione completa xjc "@@BUILD_FULL_VERSION@@"
+Driver.FullVersion = versione completa xjc "${version}"
 
-Driver.BuildID = @@BUILD_VERSION@@
+Driver.BuildID = ${version}
 
 # for JDK integration - include version in source zip
 jaxb.jdk.version=@@JAXB_JDK_VERSION@@
