--- a/jaxb-ri/runtime/jaxb1/src/main/resources/com/sun/xml/bind/Messages.properties
+++ b/jaxb-ri/runtime/jaxb1/src/main/resources/com/sun/xml/bind/Messages.properties
@@ -51,9 +51,9 @@ DefaultJAXBContextImpl.CICINotNull = \
 ContextFactory.IncorrectVersion = \
 	The specified package "{0}" is incompatible with the current JAXB runtime.
 
-# DO NOT localize the @@BUILD_VERSION@@ string - it is a token for an ant <replaceFilter>
+# DO NOT localize the ${version} string - it is a token for an ant <replaceFilter>
 DefaultJAXBContextImpl.buildID = \
-	@@BUILD_VERSION@@
+	${version}
 
 # position 0 is a pathname like a/b/c/bgm.ser
 GrammarInfo.NoBGM = \
