--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_es.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_es.properties
@@ -111,14 +111,14 @@ Driver.CompilingSchema = Compilando un esquema...
 
 Driver.FailedToGenerateCode = Fallo al producir c\u00f3digo.
 
-# DO NOT localize the @@BUILD_VERSION@@ string - it is a token for an ant <replaceFilter>
-Driver.FilePrologComment = Este archivo ha sido generado por la arquitectura JavaTM para la implantaci\u00f3n de la referencia de enlace (JAXB) XML v@@BUILD_VERSION@@ \nVisite <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \nTodas las modificaciones realizadas en este archivo se perder\u00e1n si se vuelve a compilar el esquema de origen. \nGenerado el: {0} \n
+# DO NOT localize the ${version} string - it is a token for an ant <replaceFilter>
+Driver.FilePrologComment = Este archivo ha sido generado por la arquitectura JavaTM para la implantaci\u00f3n de la referencia de enlace (JAXB) XML v${version} \nVisite <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \nTodas las modificaciones realizadas en este archivo se perder\u00e1n si se vuelve a compilar el esquema de origen. \nGenerado el: {0} \n
 
-Driver.Version = xjc @@BUILD_VERSION@@
+Driver.Version = xjc ${version}
 
-Driver.FullVersion = versi\u00f3n completa de xjc "@@BUILD_FULL_VERSION@@"
+Driver.FullVersion = versi\u00F3n completa de xjc "${version}"
 
-Driver.BuildID = @@BUILD_VERSION@@
+Driver.BuildID = ${version}
 
 # for JDK integration - include version in source zip
 jaxb.jdk.version=@@JAXB_JDK_VERSION@@
