--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_pt_BR.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_pt_BR.properties
@@ -111,14 +111,14 @@ Driver.CompilingSchema = compilando um esquema...
 
 Driver.FailedToGenerateCode = Falha ao produzir o c\u00f3digo.
 
-# DO NOT localize the @@BUILD_VERSION@@ string - it is a token for an ant <replaceFilter>
-Driver.FilePrologComment = Este arquivo foi gerado pela Arquitetura JavaTM para Implementa\u00e7\u00e3o de Refer\u00eancia (JAXB) de Bind XML, v@@BUILD_VERSION@@ \nConsulte <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \nTodas as modifica\u00e7\u00f5es neste arquivo ser\u00e3o perdidas ap\u00f3s a recompila\u00e7\u00e3o do esquema de origem. \nGerado em: {0} \n
+# DO NOT localize the ${version} string - it is a token for an ant <replaceFilter>
+Driver.FilePrologComment = Este arquivo foi gerado pela Arquitetura JavaTM para Implementa\u00e7\u00e3o de Refer\u00eancia (JAXB) de Bind XML, v${version} \nConsulte <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \nTodas as modifica\u00e7\u00f5es neste arquivo ser\u00e3o perdidas ap\u00f3s a recompila\u00e7\u00e3o do esquema de origem. \nGerado em: {0} \n
 
-Driver.Version = xjc @@BUILD_VERSION@@
+Driver.Version = xjc ${version}
 
-Driver.FullVersion = vers\u00e3o completa de xjc "@@BUILD_FULL_VERSION@@"
+Driver.FullVersion = vers\u00E3o completa de xjc "${version}"
 
-Driver.BuildID = @@BUILD_VERSION@@
+Driver.BuildID = ${version}
 
 # for JDK integration - include version in source zip
 jaxb.jdk.version=@@JAXB_JDK_VERSION@@
