--- a/jaxb-ri/core/src/main/resources/com/sun/xml/bind/v2/Messages.properties
+++ b/jaxb-ri/core/src/main/resources/com/sun/xml/bind/v2/Messages.properties
@@ -1,7 +1,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -65,3 +65,10 @@ INVALID_TYPE_IN_MAP = \
 
 INVALID_JAXP_IMPLEMENTATION = \
     You are running with invalid JAXP api or implementation. JAXP api/implementation of version 1.3.1 (included in JDK6) or higher is required. In case you are using ant, make sure ant 1.7.0 or higher is used - older versions of ant contain JAXP api/impl version 1.2 (in xml-apis.jar). If you want to keep using older ant versions, you have to configure it to use higher the JAXP api/impl versions.
+
+JAXP_SUPPORTED_PROPERTY =\
+    Property "{0}" is supported and has been successfully set by used JAXP implementation.
+
+JAXP_UNSUPPORTED_PROPERTY =\
+    Property "{0}" is not supported by used JAXP implementation.
+
