--- a/jaxb-ri/runtime/impl/src/main/resources/com/sun/xml/bind/v2/runtime/unmarshaller/Messages.properties
+++ b/jaxb-ri/runtime/impl/src/main/resources/com/sun/xml/bind/v2/runtime/unmarshaller/Messages.properties
@@ -65,3 +65,7 @@ UNABLE_TO_CREATE_MAP = \
 
 UNINTERNED_STRINGS = \
     Namespace URIs and local names to the unmarshaller needs to be interned.
+
+# user have to set Logger.getLogger("com.sun.xml.bind").setLevel(Level.FINEST)
+ERRORS_LIMIT_EXCEEDED = \
+    Errors limit exceeded. To receive all errors set 'com.sun.xml.bind' logger to FINEST level.
