Fix version in *.properties for sources jar

--- a/jaxb-ri/runtime/jaxb1/src/main/resources/com/sun/xml/bind/Messages.properties
+++ b/jaxb-ri/runtime/jaxb1/src/main/resources/com/sun/xml/bind/Messages.properties
@@ -51,7 +51,7 @@ DefaultJAXBContextImpl.CICINotNull = \
 ContextFactory.IncorrectVersion = \
 	The specified package "{0}" is incompatible with the current JAXB runtime.
 
-# DO NOT localize the ${version} string - it is a token for an ant <replaceFilter>
+# DO NOT localize the ${version} string - it is a token for an mvn <resources filter>
 DefaultJAXBContextImpl.buildID = \
 	${version}
 
