--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_de.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_de.properties
@@ -111,7 +111,7 @@ Driver.CompilingSchema = Ein Schema wird kompiliert ...
 
 Driver.FailedToGenerateCode = Code konnte nicht erzeugt werden.
 
-# DO NOT localize the ${version} string - it is a token for an ant <replaceFilter>
+# DO NOT localize the ${version} string - it is a token for an mvn <properties filter>
 Driver.FilePrologComment = Diese Datei wurde mit der JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v${version} generiert \nSiehe <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \n\u00c4nderungen an dieser Datei gehen bei einer Neukompilierung des Quellschemas verloren. \nGeneriert: {0} \n
 
 Driver.Version = xjc ${version}
