--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_es.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_es.properties
@@ -111,7 +111,7 @@ Driver.CompilingSchema = Compilando un esquema...
 
 Driver.FailedToGenerateCode = Fallo al producir c\u00f3digo.
 
-# DO NOT localize the ${version} string - it is a token for an ant <replaceFilter>
+# DO NOT localize the ${version} string - it is a token for an mvn <properties filter>
 Driver.FilePrologComment = Este archivo ha sido generado por la arquitectura JavaTM para la implantaci\u00f3n de la referencia de enlace (JAXB) XML v${version} \nVisite <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \nTodas las modificaciones realizadas en este archivo se perder\u00e1n si se vuelve a compilar el esquema de origen. \nGenerado el: {0} \n
 
 Driver.Version = xjc ${version}
