--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_pt_BR.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_pt_BR.properties
@@ -111,7 +111,7 @@ Driver.CompilingSchema = compilando um esquema...
 
 Driver.FailedToGenerateCode = Falha ao produzir o c\u00f3digo.
 
-# DO NOT localize the ${version} string - it is a token for an ant <replaceFilter>
+# DO NOT localize the ${version} string - it is a token for an mvn <properties filter>
 Driver.FilePrologComment = Este arquivo foi gerado pela Arquitetura JavaTM para Implementa\u00e7\u00e3o de Refer\u00eancia (JAXB) de Bind XML, v${version} \nConsulte <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> \nTodas as modifica\u00e7\u00f5es neste arquivo ser\u00e3o perdidas ap\u00f3s a recompila\u00e7\u00e3o do esquema de origem. \nGerado em: {0} \n
 
 Driver.Version = xjc ${version}
