--- a/jaxb-ri/core/src/main/resources/com/sun/xml/bind/v2/Messages.properties
+++ b/jaxb-ri/core/src/main/resources/com/sun/xml/bind/v2/Messages.properties
@@ -76,4 +76,4 @@ JAXP_XML_SECURITY_DISABLED=\
     "Xml Security disabled, no JAXP xsd external access configuration necessary."
 
 JAXP_EXTERNAL_ACCESS_CONFIGURED=\
-    "Detected explicity JAXP configuration, no JAXP xsd external access configuration necessary."
+    "Detected explicitly JAXP configuration, no JAXP xsd external access configuration necessary."
