--- a/jaxb-ri/runtime/impl/src/main/resources/com/sun/xml/bind/v2/runtime/reflect/Messages.properties
+++ b/jaxb-ri/runtime/impl/src/main/resources/com/sun/xml/bind/v2/runtime/reflect/Messages.properties
@@ -1,7 +1,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -54,3 +54,5 @@ NO_GETTER = \
     The property has a setter "{0}" but no getter. \
     For marshaller, please define getters.
 
+INVALID_XML_ENUM_VALUE = \
+    "{0}" is not a valid value for {1}.
