java.net links fix
Signed-off-by: Roman Grigoriadi <bravehorsie@gmail.com>

--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_es.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_es.properties
@@ -144,7 +144,7 @@ Driver.CompilingSchema = Compilando un esquema...
 Driver.FailedToGenerateCode = Fallo al producir c\u00f3digo.
 
 # DO NOT localize the ${version} string - it is a token for an mvn <properties filter>
-Driver.FilePrologComment = Este archivo ha sido generado por la arquitectura JavaTM para la implantaci\u00f3n de la referencia de enlace (JAXB) XML v${version} \nVisite <a href="https://jaxb.java.net/">https://jaxb.java.net/</a> \nTodas las modificaciones realizadas en este archivo se perder\u00e1n si se vuelve a compilar el esquema de origen. \nGenerado el: {0} \n
+Driver.FilePrologComment = Este archivo ha sido generado por la arquitectura JavaTM para la implantaci\u00f3n de la referencia de enlace (JAXB) XML v${version} \nVisite <a href="https://javaee.github.io/jaxb-v2/">https://javaee.github.io/jaxb-v2/</a> \nTodas las modificaciones realizadas en este archivo se perder\u00e1n si se vuelve a compilar el esquema de origen. \nGenerado el: {0} \n
 
 Driver.Version = xjc ${version}
 
