--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_it.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/MessageBundle_it.properties
@@ -144,7 +144,7 @@ Driver.CompilingSchema = compilazione di uno schema in corso...
 Driver.FailedToGenerateCode = Produzione del codice non riuscita.
 
 # DO NOT localize the ${version} string - it is a token for an mvn <properties filter>
-Driver.FilePrologComment = Questo file \u00e8 stato generato dall''architettura JavaTM per XML Binding (JAXB) Reference Implementation, v${version} \nVedere <a href="https://jaxb.java.net/">https://jaxb.java.net/</a> \nQualsiasi modifica a questo file andr\u00e0 persa durante la ricompilazione dello schema di origine. \nGenerato il: {0} \n
+Driver.FilePrologComment = Questo file \u00e8 stato generato dall''architettura JavaTM per XML Binding (JAXB) Reference Implementation, v${version} \nVedere <a href="https://javaee.github.io/jaxb-v2/">https://javaee.github.io/jaxb-v2/</a> \nQualsiasi modifica a questo file andr\u00e0 persa durante la ricompilazione dello schema di origine. \nGenerato il: {0} \n
 
 Driver.Version = xjc ${version}
 
