Fixing error message for jaxb.index file contents

--- a/jaxb-ri/runtime/impl/src/main/resources/com/sun/xml/bind/v2/Messages.properties
+++ b/jaxb-ri/runtime/impl/src/main/resources/com/sun/xml/bind/v2/Messages.properties
@@ -40,7 +40,7 @@
 
 # Not concatenated with any other string (written on a separate line).
 ILLEGAL_ENTRY = \
-    illegal entry: "{0}", entries should be of the form "ClassName" or "OuterClass.InnerClass", not "ClassName.class" or "fully.qualified.ClassName"
+    illegal entry: "{0}", entries should be of the form "ClassName" or "OuterClass$InnerClass", not "ClassName.class" or "fully.qualified.ClassName"
 
 # {0} - class name, {1} - resource location e.g. error loading class "Foo" listed in foo/bar/jaxb.index, make sure that entries are accessable on CLASSPATH and of the form "ClassName" or "OuterClass.InnerClass", not "ClassName.class" or "fully.qualified.ClassName"
 ERROR_LOADING_CLASS = \
